@@ -120,7 +120,7 @@ if test "x$docs_only" = "xyes"; then
         AC_FYI("Only building documentation")
 else
 
-PKGCONFIG_MODULES='gmodule-2.0 >= 1.3.5 gobject-2.0 >= 1.3.5 oaf-2.0'
+PKGCONFIG_MODULES='gmodule-2.0 >= 1.3.5 gobject-2.0 >= 1.3.5 bonobo-activation-2.0'
 PKGCONFIG_MODULES_WITH_XML="$PKGCONFIG_MODULES libxml-2.0"
 PKGCONFIG_MODULES_WITH_GTK="gtk+-2.0 $PKGCONFIG_MODULES"
 
