@@ -7,6 +7,6 @@ includedir=@includedir@
 Name: gconf
 Description: GNOME Config System.
 Version: @VERSION@
-Requires: oaf-2.0
+Requires: bonobo-activation-2.0
 Libs: -L${libdir} -lgconf-@MAJOR_VERSION@
 Cflags: -I${includedir}/gconf/@MAJOR_VERSION@
