@@ -1,3 +1,7 @@
+2001-08-01  Michael Meeks  <michael@ximian.com>
+
+	* port to bonobo-activation from oaf.
+
 2001-07-28  Yanko Kaneti  <yaneti@declera.com>
 
 	* gconf/gconftool.c (main): s/all-pairs/all-entries/ in the error
